--- a/src/components/AppContents/CreateMeme/CreateMeme.css
+++ b/src/components/AppContents/CreateMeme/CreateMeme.css
@@ -81,5 +81,35 @@
 .meme > .top {
   top: 0;
 }
-.reset-image {
+
+@media screen and (max-width: 700px) {
+  .create-show {
+    height: auto;
+    width: 100%;
+    margin: 5px;
+    padding: 0;
+  }
+  .meme {
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: 100%;
+  }
+  .meme > img{
+    height: 350px;
+    width: 100%;
+    
+  }
+  .meme > h2 {
+    padding: 0;
+    font-size: 1rem;
+    width: 100%;
+    font-size: smaller;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+  }
+  .final-meme{
+    height: 350px;
+    width: 100%;
+  }
 }
