--- a/src/components/AppContents/CreateMeme/CreateMeme.css
+++ b/src/components/AppContents/CreateMeme/CreateMeme.css
@@ -84,6 +84,9 @@
 
 @media screen and (max-width: 700px) {
   .create-show {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     height: auto;
     width: 100%;
     margin: 5px;
