--- a/src/components/AppContents/CreateMeme/CreateMeme.css
+++ b/src/components/AppContents/CreateMeme/CreateMeme.css
@@ -107,8 +107,9 @@
     padding: 0;
     /* font-size: 1rem; */
     width: 100%;
-    font-size: medium;
-    -webkit-text-stroke-width: 1px;
+    font-size: large;
+    font-weight: 600;
+    -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
   }
   .final-meme{
