--- a/src/components/AppContents/CreateMeme/CreateMeme.css
+++ b/src/components/AppContents/CreateMeme/CreateMeme.css
@@ -58,7 +58,8 @@
   margin: 10px 0;
   padding: 0 5px;
   font-family: impact;
-  font-size: 18px;
+  display: inline-block;
+  font-size: 2vw;
   text-transform: uppercase;
   color: white;
   /* letter-spacing: 1px; */
@@ -80,6 +81,16 @@
 
 .meme > .top {
   top: 0;
+}
+
+.downloadButton{
+  background-color: indigo;
+  color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 500px) {
@@ -107,8 +118,9 @@
     padding: 0;
     /* font-size: 1rem; */
     width: 100%;
+    display: inline-block;
     font-family: impact;
-    font-size: large;
+    font-size: 5vw;
     font-weight: 600;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
