--- a/src/components/AppContents/SetUpProfile/SetUpAccount.css
+++ b/src/components/AppContents/SetUpProfile/SetUpAccount.css
@@ -1,5 +1,6 @@
 .setup-show {
   display: block;
+}
 
   .form {
     justify-content: center;
@@ -14,6 +15,7 @@
     background-color: rgb(255, 212, 94);
     box-shadow: -3px -3px 7px rgba(94, 104, 121, 0.377),
       3px 3px 7px rgba(94, 104, 121, 0.377);
+  }
 
     .label-top {
       font-size: 30px;
@@ -32,6 +34,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+    }
 
       .img {
         height: 300px;
@@ -42,13 +45,14 @@
         background-color: red;
         color: white;
         border: 2px solid white;
+      }
 
-        &:hover {
+        .remove-image:hover {
           background-color: rgb(82, 14, 14);
           border: 2px solid black;
         }
-      }
-    }
+      
+    
     .label {
       background-color: indigo;
       color: white;
@@ -65,19 +69,17 @@
       background-color: gray;
       color: white;
       text-decoration: none;
+    }
 
-      &:hover {
+      .save-profile:hover {
         background-color: #ffbb00;
         color: black;
         border-radius: 5px;
         transition: 0.3s ease;
       }
-      &:disabled {
+      .save-profile:disabled {
         background-color: rgb(218, 218, 218);
       }
-    }
-  }
-}
-// .setup-hide {
-//   display: none;
-// }
+      @media screen and (max-width: 700px) {
+      }
+
