--- a/src/components/AppContents/CreateMeme/CreateMeme.css
+++ b/src/components/AppContents/CreateMeme/CreateMeme.css
@@ -57,7 +57,7 @@
   transform: translateX(-50%);
   margin: 5px 0;
   padding: 0 5px;
-  font-family: impact;
+  font-family: Impacto, Impact, sans-serif;
   display: inline-block;
   font-size: 3vw;
   text-transform: uppercase;
@@ -118,7 +118,7 @@
     /* font-size: 1rem; */
     width: 100%;
     display: inline-block;
-    font-family: impact;
+    font-family: Impacto, Impact, sans-serif;
     font-size: 5vw;
     font-weight: 600;
     -webkit-text-stroke-width: 0.5px;
